Fixing spacing

--- a/style.css
+++ b/style.css
@@ -1,208 +1,214 @@
 :root {
-/*https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Values/color_value/light-dark*/
+	/*https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Values/color_value/light-dark*/
 
-color-scheme: light dark; 
+	color-scheme: light dark;
 
-/* Colors */
---color-background: light-dark(#F6F8FA, #0d1117);
---color-border: light-dark(#dbdde0, #21262d);
---color-text: light-dark(#000000, #ffffff);
---color-surface: light-dark(#ffffff, #000000);
---color-subtle: light-dark(#666666, #888888);
---color-links: light-dark(#000000, #000000);
+	/* Colors */
+	--color-background: light-dark(#F6F8FA, #0d1117);
+	--color-border: light-dark(#dbdde0, #21262d);
+	--color-text: light-dark(#000000, #ffffff);
+	--color-surface: light-dark(#ffffff, #000000);
+	--color-subtle: light-dark(#666666, #888888);
+	--color-links: light-dark(#000000, #000000);
 
-/* Typography */
---font: 'Geist', sans-serif;
---font-mono: 'Geist Mono', monospace;
+	/* Typography */
+	--font: 'Geist', sans-serif;
+	--font-mono: 'Geist Mono', monospace;
+	--font-size-sm: 1rem; 
+	--font-size-md: 1.5rem; 
+	--font-size-lg: 5rem;
+	--font-size-lx: 10rem;
 
-/* Layout */
---space-sm: 0.5rem;
---space-md: 2rem;
---space-lg: 8rem; 
---max-width: 56rem; 
---radius: 1rem;
+	/* Layout */
+	--space-sm: 0.5rem;
+	--space-md: 2rem;
+	--space-lg: 8rem;
+	--max-width: 56rem;
+	--radius: 1rem;
 }
 
-body{
-    width: 100%;
-    padding: var(--space-sm);
-    background-color: var(--color-background);
-    color: var(--color-text);
-    font-family: var(--font);
+body {
+	width: 100%;
+	padding: var(--space-sm);
+	background-color: var(--color-background);
+	color: var(--color-text);
+	font-family: var(--font);
 
-        a {
-        text-decoration: underline;
-        }
-        p{
-        line-height: 135%;
-        kerning: 130%;
-        }
+	a {
+		text-decoration: underline;
+	}
+
+	p {
+		line-height: 135%;
+		kerning: 130%;
+	}
 }
 
 header {
-    nav {
-    display:flex; 
-    justify-content: space-between;
-    padding: var(--space-sm); 
-    background-color: var(--color-surface);
-    font-family: var(--font);
-    border-radius: var(--radius);
-    border: 0.05rem solid var(--color-border);
-    
+	nav {
+		display: flex;
+		justify-content: space-between;
+		padding: var(--space-sm);
+		background-color: var(--color-surface);
+		font-family: var(--font);
+		border-radius: var(--radius);
+		border: 0.05rem solid var(--color-border);
 
-         a {
-        text-decoration: none;
-    }
+		a {
+			text-decoration: none;
+		}
 
+		.menu {
+			display: flex;
+			flex-direction: row;
+			gap: var(--space-md);
+			list-style: none;
+		}
 
-        .menu {
-        display: flex;
-        flex-direction: row;
-        gap: var(--space-md);
-        list-style: none;
+		.logo {
+			font-weight: 500;
+		}
+	}
 
-        }
-        .logo {
-        font-weight: 500;
-        }
-    }
-    hgroup {
-    padding-inline: var(--space-md);
-    margin-block: var(--space-sm);
-    padding-block: var(--space-md);
+	hgroup {
+		padding-inline: var(--space-md);
+		padding-block: var(--space-md);
+		margin-block: var(--space-sm);
 
-        h1 {
-            padding-block-start: var(--space-lg);
-            font-family: var(--font);
-            font-size: 5rem;
-            line-height: 90%;
-        }
-        p {
-            font-family: var(--font);
-            font-size: 1.25rem;
-            padding-block-start: var(--space-md);
-            padding-block-end: var(--space-md);
-        }
-    }
+		h1 {
+			padding-block-start: var(--space-lg);
+			font-family: var(--font);
+			font-size: var(--font-size-lg);
+			line-height: 90%;
+		}
+
+		p {
+			padding-block-start: var(--space-md);
+			padding-block-end: var(--space-md);
+			font-family: var(--font);
+			font-size: var(--font-size-md);
+		}
+	}
 }
-.cta {
-    h2{
-    text-align: center;
-    font-family: var(--font);
-    font-size: 1rem;
-    padding-block: var(--space-md);
 
-    
-    }
-}
-main ul {
-        display: grid;
-        grid-template-columns: 1fr;
-        gap: var(--space-sm);
+main {
+	.cta {
+		h2 {
+			padding-block: var(--space-md);
+			text-align: center;
+			font-family: var(--font);
+			font-size: var(--font-size-sm);
+		}
+	}
 
+	ul {
+		display: grid;
+		grid-template-columns: 1fr;
+		gap: var(--space-sm);
 
-  p {
-            padding-block: var(--space-sm);
-        }
-   
-    li {
-        display: flex;
-        flex-direction: column;
-        padding: var(--space-md);
-        gap: var(--space-sm);
-        background-color: var(--color-surface);
-        border-radius: var(--radius);
-        border: 0.05rem solid var(--color-border);
-        
+		p {
+			padding-block: var(--space-sm);
+		}
 
-        h2 {
-            font-size: var(--space-md);
-            font-weight: 500;
-        }
-        .showcase {
-            display: flex;
-            gap: var(--space-sm);
-            overflow: hidden;
+		li {
+			display: flex;
+			flex-direction: column;
+			padding: var(--space-md);
+			gap: var(--space-sm);
+			background-color: var(--color-surface);
+			border-radius: var(--radius);
+			border: 0.05rem solid var(--color-border);
 
-            img {
-            flex: 1;
-            object-fit: cover;
-            min-width: 0;
-            height: 4rem;
-            height: 100%;
-            }
-        }
-    }
-    
+			h2 {
+				font-size: var(--space-md);
+				font-weight: 500;
+			}
+
+			.showcase {
+				display: flex;
+				gap: var(--space-sm);
+				overflow: hidden;
+
+				img {
+					flex: 1;
+					object-fit: cover;
+					min-width: 0;
+					height: 4rem;
+					height: 100%;
+				}
+			}
+		}
+	}
 }
 
 footer {
-    margin-block-start: var(--space-md);
-    padding: var(--space-md);
-          h3 {
-            font-size: 5rem;
-            line-height: 95%;
-        }
-        p {
-            font-size: 1rem;
-            padding-block-end: var(--space-md);
-        }
-    
-    .footer-menu-container {
-      display: flex;  
-      justify-content: space-between;
-        a {
-        text-decoration: none;
-        color: var(--color-subtle);
-    }
-    }
-    .footer-menu{
-        display: flex;
-        gap: var(--space-md);
+	margin-block-start: var(--space-md);
+	padding: var(--space-md);
 
+	h3 {
+		font-size: var(--font-size-lg);
+		line-height: 95%;
+	}
 
-         p {
-        font-size: 0.875rem;
-        color: var(--color-subtle);
-        margin: 0;
-        }
-    
+	p {
+		font-size: var(--font-size-sm);
+		padding-block-end: var(--space-md);
+	}
 
-    }
-   
+	.footer-menu-container {
+		display: flex;
+		justify-content: space-between;
+
+		a {
+			text-decoration: none;
+			color: var(--color-subtle);
+		}
+	}
+
+	.footer-menu {
+		display: flex;
+		gap: var(--space-md);
+
+		p {
+			font-size:var(--font-size-sm);
+			color: var(--color-subtle);
+			margin: 0;
+		}
+	}
 }
+
 @media (min-width: 768px) {
-     body {
-        max-width: 1200px;
-        margin: 0 auto;
-    }
-header {
+	body {
+		max-width: 1200px;
+		margin: 0 auto;
+	}
 
+	header {
+		hgroup {
+			h1 {
+				max-width: 60%;
+				font-size: 10rem;
+			}
 
-hgroup {
-    h1 {
-        max-width: 60%;
-        font-size: 10rem;
-    }
-    p{
-        max-width: 60%;
-    }
-}
-}
+			p {
+				max-width: 60%;
+			}
+		}
+	}
 
-main ul {
-        grid-template-columns: 1fr 1fr;
-        gap: var(--space-sm);
-}
-footer {
-    h3 {
-            font-size: 6rem;
-        }
-    p {
-            font-size: 1.5rem;
-            padding-block-end: var(--space-md);
-        }
-    
-}
+	main ul {
+		grid-template-columns: 1fr 1fr;
+		gap: var(--space-sm);
+	}
 
+	footer {
+		h3 {
+			font-size: 6rem;
+		}
+
+		p {
+			font-size: 1.5rem;
+			padding-block-end: var(--space-md);
+		}
+	}
 }
